Fix spacing on mobile view in profile settings

--- a/lego-webapp/pages/users/@username/settings/profile/UserSettings.module.css
+++ b/lego-webapp/pages/users/@username/settings/profile/UserSettings.module.css
@@ -13,3 +13,8 @@
     flex-direction: column;
   }
 }
+
+.socialLinks {
+  flex: 1;
+  width: 100%;
+}
